# claude-memory-graph

./: .gitignore  Cargo.toml  README.md  mcp-servers.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
claude_memory_graph/: __main__.py  base.ttl  capture_rules.py  context_entries.py  distill.py  gaps.py  gate.py  hook_extensions.py  http_server.py  namespaces.py  ontology.py  planner.py  store.py
claude_memory_graph/gate/: __init__.py  coverage.py  dashboard.py  doctor.py  misses.py  nudge.py  preview.py  pulse.py  recall.py  runtime.py  session_corpus.py
claude_memory_graph/tools/: __init__.py  forget.py  link.py  query.py  recall.py  reflect.py  search.py  store_resource.py
context-handoff/: claude-memory-graph__2026-07-02_19-28.md
docs/: ARCHITECTURE.md  CAPTURE.md  CODE-GRAPH.md  CONTEXT-CREATION.md  CONTEXT-WINDOW.md  DISTILL-CREATION.md  FEDERATION.md  GLOSSARY.md  HANDBOOK.md  ORCHESTRATION.md  QUERY-PLANNING.md  RETRIEVAL.md  ROADMAP.md  SHARING.md  SYSTEM.md  TUNING.md
docs/tasks/: README.md  auto-distill.md  bitemporal-links.md  code-anchors.md  code-memory-rules.md  dig-counter.md  distill-two-pass-dedup.md  flush-hooks.md  grounding-coverage-experiment.md  memory-search-tool.md  observation-capture.md  planner-telemetry.md  private-tags.md  prompt-count-context-trigger.md  prompt-gated-recall.md  query-planner-v0.md  recall-miss-detector.md  remote-server.md  session-context-recall.md  session-start-prime.md  structured-context-entries.md  temporal-query-modifiers.md  transcript-telemetry.md  verb-forms-ontology.md
hook-kit/: pyproject.toml
hook-kit/.claude-plugin/: plugin.json
hook-kit/claude_hook_kit/: __init__.py  __main__.py  dispatch.py  extension.py  registry.py  state.py  text.py
hook-kit/hooks/: hooks.json
hook-kit/skills/install/: SKILL.md
hook-kit/tests/: test_hook_kit.py
hooks/: context-protocol.md  dispatch.sh  hooks.json  session-start.sh  user-prompt-submit.sh
ontology/: base.ttl
skills/distill/: SKILL.md
skills/ingest/: SKILL.md
skills/reflect/: SKILL.md
src/: main.rs  namespaces.rs  ontology.rs  store.rs  util.rs
src/tools/: evolve.rs  forget.rs  inject.rs  (+7 more)
tests/: conftest.py  test_amend_telemetry.py  test_anchors.py  test_bitemporal.py  test_capture_rules.py  test_context_entries.py  test_coverage.py  test_distill.py  test_doctor.py  test_gaps_pulse.py  test_gate.py  test_hook_extensions.py  test_ontology_lexicon.py  test_planner.py  test_preview.py  test_search.py  test_session_recall.py
