[package]
name = "claude-memory-graph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-memory-graph"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
oxigraph = { version = "0.5", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
