[project]
name = "claude-hook-kit"
version = "0.2.0"
description = "Extension framework for Claude Code hooks: base class, session state, dispatcher"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-hooks = "claude_hook_kit.dispatch:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_hook_kit"]
